awe-tests/awe-boot-react/kubernetes/awe-react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awe-react
  labels:
    app: awe-react
spec:
  replicas: 2
  selector:
    matchLabels:
      app: awe-react
  template:
    metadata:
      labels:
        app: awe-react
    spec:
      containers:
        - name: awe-react
          image: registry.gitlab.com/aweframework/awe-react/awe-react:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 256Mi
      imagePullSecrets:
        - name: registry.gitlab.com
