awe-tests/awe-boot-react/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awe-react
  annotations:
    app.gitlab.com/env: __CI_ENVIRONMENT_SLUG__
    app.gitlab.com/app: __CI_PROJECT_PATH_SLUG__
  labels:
    app: awe-react
    env: __CI_ENVIRONMENT_SLUG__
spec:
  replicas: 2
  selector:
    matchLabels:
      app: awe-react
      env: __CI_ENVIRONMENT_SLUG__
  template:
    metadata:
      annotations:
        app.gitlab.com/env: __CI_ENVIRONMENT_SLUG__
        app.gitlab.com/app: __CI_PROJECT_PATH_SLUG__
        version: __VERSION__
      labels:
        app: awe-react
        env: __CI_ENVIRONMENT_SLUG__
    spec:
      containers:
      - name: awe-react
        image: registry.gitlab.com/aweframework/awe/awe-react:__VERSION__
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 256Mi
      imagePullSecrets:
        - name: registry.gitlab.com
