awe-tests/awe-boot-react/kubernetes/awe-react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awe-react-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    name: awe-react
  type: LoadBalancer
