awe-tests/awe-boot-react/kubernetes/awe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-awe
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "awe-boot.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: awe-boot-service
                port:
                  number: 80
    - host: "awe-react.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: awe-react-service
                port:
                  number: 80
